[gd_scene load_steps=15 format=3 uid="uid://gnknhq01f4rf"]

[ext_resource type="Theme" uid="uid://b8gb88bprbuf2" path="res://main_theme.tres" id="1_jw53m"]
[ext_resource type="Script" uid="uid://dwdxcagrnrhh0" path="res://scripts/family_scene.gd" id="1_lafal"]
[ext_resource type="Script" uid="uid://dkqhdjyopoieh" path="res://scripts/instructions_popup_family.gd" id="2_yn38p"]
[ext_resource type="Texture2D" uid="uid://cay2lpyyokjpg" path="res://background_images/main_menu_image.png" id="3_05rbw"]
[ext_resource type="RichTextEffect" uid="uid://crbsguq3dqcg4" path="res://fonts/rich_text.tres" id="4_kms6j"]
[ext_resource type="AudioStream" uid="uid://dno0iubhgq47l" path="res://sounds/button_pop.wav" id="5_ti8cm"]
[ext_resource type="AudioStream" uid="uid://bk6xfxhrs1a8r" path="res://sounds/warning.wav" id="6_56p4u"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4uojo"]
bg_color = Color(0.602528, 0.601874, 0.579556, 1)
expand_margin_left = 10.0
expand_margin_right = 10.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_05rbw"]
bg_color = Color(0.441095, 0.630238, 0.7289, 1)

[sub_resource type="Animation" id="Animation_05rbw"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("InstructionsPopupFamily:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_yn38p"]
resource_name = "popup_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("InstructionsPopupFamily:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_4uojo"]
resource_name = "popup_out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("InstructionsPopupFamily:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2umkj"]
_data = {
&"RESET": SubResource("Animation_05rbw"),
&"popup_in": SubResource("Animation_yn38p"),
&"popup_out": SubResource("Animation_4uojo")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2umkj"]

[node name="FamilyScene" type="Control"]
layout_mode = 3
anchors_preset = 0
theme = ExtResource("1_jw53m")
script = ExtResource("1_lafal")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 7.0
offset_top = 43.0
offset_right = 1159.0
offset_bottom = 753.0

[node name="Control" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 20
alignment = 1

[node name="LeftPanel" type="PanelContainer" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(175, 0)
layout_mode = 2
size_flags_horizontal = 0

[node name="FamilyListVBox" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/LeftPanel"]
custom_minimum_size = Vector2(125, 0)
layout_mode = 2
alignment = 1

[node name="MiddlePanel" type="PanelContainer" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/MiddlePanel"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4

[node name="FamilyImage" type="TextureRect" parent="VBoxContainer/HBoxContainer/MiddlePanel/VBoxContainer"]
custom_minimum_size = Vector2(150, 250)
layout_mode = 2
expand_mode = 3

[node name="GenderToggle" type="CheckButton" parent="VBoxContainer/HBoxContainer/MiddlePanel/VBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 0
text = "Pictures"

[node name="NameInput" type="LineEdit" parent="VBoxContainer/HBoxContainer/MiddlePanel/VBoxContainer"]
layout_mode = 2

[node name="DescriptionLabel" type="Label" parent="VBoxContainer/HBoxContainer/MiddlePanel/VBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
autowrap_mode = 3

[node name="ConfirmButton" type="Button" parent="VBoxContainer/HBoxContainer/MiddlePanel/VBoxContainer"]
layout_mode = 2
text = "Add to Family"

[node name="RightPanel" type="PanelContainer" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(175, 0)
layout_mode = 2
size_flags_horizontal = 0

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/HBoxContainer/RightPanel"]
layout_mode = 2

[node name="ConfirmedListVBox" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/RightPanel/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="StartGameButton" type="Button" parent="VBoxContainer/HBoxContainer/RightPanel"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
text = "Start Game"

[node name="DifficultySlider" type="HSlider" parent="VBoxContainer"]
custom_minimum_size = Vector2(650, 0)
layout_mode = 2
size_flags_horizontal = 4
min_value = 1.0
max_value = 10.0
value = 1.0
tick_count = 10
ticks_on_borders = true

[node name="DifficultyLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 1
theme_override_styles/normal = SubResource("StyleBoxFlat_4uojo")
text = "Initial Difficulty: 1"

[node name="BackButton" type="Button" parent="."]
layout_mode = 0
offset_left = 6.0
offset_top = 661.0
offset_right = 81.0
offset_bottom = 700.0
text = "Back"

[node name="InfoButton" type="Button" parent="."]
layout_mode = 0
offset_left = 6.0
offset_top = 617.0
offset_right = 81.0
offset_bottom = 656.0
text = "Info"

[node name="InstructionsPopupFamily" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = 215.0
offset_top = 189.0
offset_right = 977.0
offset_bottom = 493.0
theme = ExtResource("1_jw53m")
theme_override_styles/panel = SubResource("StyleBoxFlat_05rbw")
script = ExtResource("2_yn38p")

[node name="VBoxContainer" type="VBoxContainer" parent="InstructionsPopupFamily"]
layout_mode = 2
theme_override_constants/separation = 3

[node name="HBoxContainer" type="HBoxContainer" parent="InstructionsPopupFamily/VBoxContainer"]
layout_mode = 2

[node name="CloseButton" type="Button" parent="InstructionsPopupFamily/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Close"

[node name="InstructionsText" type="RichTextLabel" parent="InstructionsPopupFamily/VBoxContainer"]
z_index = 10
clip_contents = false
custom_minimum_size = Vector2(160, 250)
layout_mode = 2
bbcode_enabled = true
custom_effects = [ExtResource("4_kms6j")]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_2umkj")
}

[node name="WarningLabel" type="Label" parent="."]
visible = false
custom_minimum_size = Vector2(20, 20)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 375.0
offset_top = 622.0
offset_right = 804.0
offset_bottom = 656.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_2umkj")
text = "Difficulty limited to 8 for 3 members."

[node name="WarningTimer" type="Timer" parent="."]
one_shot = true

[node name="TextureRect" type="TextureRect" parent="."]
z_index = -5
layout_mode = 0
offset_left = -6.0
offset_right = 2853.0
offset_bottom = 1536.0
scale = Vector2(0.406792, 0.460246)
mouse_filter = 2
texture = ExtResource("3_05rbw")

[node name="ButtonSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_ti8cm")

[node name="WarningSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_56p4u")

[connection signal="pressed" from="InfoButton" to="." method="_on_info_button_pressed"]
